--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -47,10 +47,10 @@
 .inputs>[type='text'],.inputs>[type='password']{
     width: 500px;
     height: 50px;
-    padding-left: 40px;
+    padding-left: 50px;
     font-size: 20px;
-    border: none;
-    border-bottom: 1px solid rgb(86, 85, 85);
+    border: 1px solid rgb(86, 85, 85);
+    border-radius: 10px;
     outline: none;
     background-color: transparent;
 }
@@ -61,8 +61,8 @@
 }
 
 .inputs>[type='text']:focus,.inputs>[type='password']:focus{
-    border: none;
-    border-bottom: 3px solid rgb(0, 0, 0);
+    border: 3px solid rgb(0, 0, 0);
+    background-color: transparent;
 }
 
 
@@ -77,6 +77,7 @@
     color: #434343;
     font-size: 26px;
     position: absolute;
+    left: 10px;
 }
 
 .submitbtn{
