--- a/src/Pages/Loading/Loading.css
+++ b/src/Pages/Loading/Loading.css
@@ -82,3 +82,80 @@
       transform: rotate(360deg);
     }
   }
+
+
+
+@media (max-width:300px) {
+  .lds-roller {
+    width: 70px;
+    height: 70px;
+  }
+
+  .lds-roller div {
+
+    animation: lds-roller 1.2s cubic-bezier(0.5, 1, 0.5, 1) infinite;
+    transform-origin: 40px 40px;
+  }
+
+  .lds-roller div:after {
+    width: 5px;
+    height: 5px;
+    margin: 19px 0 0 30px;
+  }
+  .lds-roller div:nth-child(1) {
+    animation-delay: -0.036s;
+  }
+  .lds-roller div:nth-child(1):after {
+    top: 30px;
+    left: 25px;
+  }
+  .lds-roller div:nth-child(2) {
+    animation-delay: -0.072s;
+  }
+  .lds-roller div:nth-child(2):after {
+    top: 35px;
+    left: 20px;
+  }
+  .lds-roller div:nth-child(3) {
+    animation-delay: -0.108s;
+  }
+  .lds-roller div:nth-child(3):after {
+    top: 38px;
+    left: 14px;
+  }
+  .lds-roller div:nth-child(4) {
+    animation-delay: -0.144s;
+  }
+  .lds-roller div:nth-child(4):after {
+    top: 39px;
+    left: 6px;
+  }
+  .lds-roller div:nth-child(5) {
+    animation-delay: -0.18s;
+  }
+  .lds-roller div:nth-child(5):after {
+    top: 38px;
+    left: -2px;
+  }
+  .lds-roller div:nth-child(6) {
+    animation-delay: -0.216s;
+  }
+  .lds-roller div:nth-child(6):after {
+    top: 35px;
+    left: -8px;
+  }
+  .lds-roller div:nth-child(7) {
+    animation-delay: -0.252s;
+  }
+  .lds-roller div:nth-child(7):after {
+    top: 30px;
+    left: -13px;
+  }
+  .lds-roller div:nth-child(8) {
+    animation-delay: -0.288s;
+  }
+  .lds-roller div:nth-child(8):after {
+    top: 23px;
+    left: -15px;
+  }
+}
