--- a/src/Pages/Reset/Reset.css
+++ b/src/Pages/Reset/Reset.css
@@ -1,6 +1,7 @@
 .resetcontainer{
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  max-height: max-content;
   background-image: url(./kcp\ copy.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -10,9 +11,16 @@
   align-items: center;
 }
 
+.admno{
+  font-size: 20px;
+  font-weight: 500;
+}
+
 
 
 .resetform{
+  margin-top: 50px;
+  margin-bottom: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -60,6 +68,7 @@
   background-color: transparent;
   border-radius: 10px;
   border: 3px solid rgb(105, 105, 105);
+  padding-right: 50px;
   padding-left: 20px;
   font-size: 20px;
   outline: none;
@@ -79,6 +88,7 @@
   background-color: transparent;
   border-radius: 10px;
   border: 3px solid rgb(105, 105, 105);
+  padding-right: 50px;
   padding-left: 20px;
   font-size: 20px;
   outline: none;
@@ -177,6 +187,8 @@
   font-size: 18px;
   font-weight: 500;
   color: white;
+  width: 500px;
+  text-align: left;
 }
 
 .criteria>div>.check{
@@ -201,6 +213,35 @@
 
 
 
+.resetok{
+  border: 3px solid;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+  border-radius: 50%;
+  color: rgb(14, 144, 14);
+  font-weight: bolder;
+  animation: rotate 1s;
+}
+
+
+@keyframes rotate {
+  0%{
+    transform: scale(2) rotateY(-360deg);
+  }
+  50%{
+    transform: scale(1.5) rotateY(0deg);
+  }
+  100%{
+    transform: scale(1) ;
+  }
+}
+
+
+
 .resetsuccesfull{
   display: flex;
   flex-direction: column;
@@ -209,9 +250,10 @@
   gap: 30px;
   padding: 20px;
   border-radius: 15px;
-  background-color: rgba(255, 255, 255, 0.65);
+  background-color: rgba(255, 255, 255, 0.715);
   width: 500px;
   height: 150px;
+  height: 300px;
 }
 
 
@@ -231,34 +273,558 @@
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background-color: orangered;
+  background-color: rgb(0, 94, 255);
+  transition: .2s;
 }
-
 
 .wave1{
-  animation: wave  1s 1s infinite;
+  animation: loading 1s ease-in-out infinite;
 }
-
-
 .wave2{
-  animation: wave  1s 1.4s infinite;
+  animation: loading 1s .4s ease-in-out infinite;
 }
-
 .wave3{
-  animation: wave  1s 1.8s infinite;
+  animation: loading 1s .6s ease-in-out infinite;
 }
-
 .wave4{
-  animation: wave  1s 1.12s infinite;
+  animation: loading 1s .8s ease-in-out infinite;
 }
 
-
-
-@keyframes wave {
+@keyframes loading{
   0%{
-    transform: translateY(-50%);
+      transform: translateY(0%);
+      background-color: rgb(3, 84, 150);
+  }
+  50%{
+      transform: translateY(-100%);
+      background-color: rgb(0, 140, 255);
   }
   100%{
-    transform: translateZ(0%);
+      transform: translateY(0%);
+      background-color: blue;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+@media (max-width:700px) {
+  .admno{
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+
+  .resetform{
+    gap: 20px;
+    padding: 20px;
+  }
+
+
+  .resettitle{
+    margin-bottom: 30px;
+    font-size: 40px;
+  }
+
+
+
+
+
+
+  .resetinputs{
+    gap: 15px;
+  }
+
+
+  .resetinputs>label{
+    padding-left:10px ;
+    font-size: 26px;
+    font-weight: 500;
+  }
+
+
+  .resetinputs>div>[type='password'],.resetinputs>div>[type='text']{
+    width: 400px;
+    height: 45px;
+    padding-right: 40px;
+    padding-left: 15px;
+    font-size: 20px;
+  }
+
+
+
+
+  .eye{
+    position: absolute;
+    right: 10px;
+    font-size: 23px;
+    cursor: pointer;
+    color: rgb(53, 53, 53);
+  }
+
+
+
+
+
+  .strike{
+    display: flex;
+    position: absolute;
+    background-color: rgb(48, 48, 48);
+    width: 40px;
+    height: 3px;
+    right: 5px;
+    cursor: pointer;
+    transform: rotate(-45deg);
+  }
+
+
+
+
+
+
+
+  .resetbtn{
+    background-color: transparent;
+    width: 150px;
+    font-size: 23px;
+    border-radius: 10px;
+    height: 50px;
+    font-weight: 600;
+    background-color: rgb(73, 73, 209);
+    color: aliceblue;
+    border: none;
+    transition: .4s;
+    cursor: pointer;
+  }
+
+
+  .resetbtn:hover{
+    background-color: blue;
+  }
+
+
+  .criteria{
+    width: 100%;
+    gap:10px;
+  }
+
+
+  .criteria>div{
+    display: flex;
+    gap: 10px;
+    margin-left: 15px;
+  }
+
+
+  .criteria>div>label{
+    font-size: 18px;
+    font-weight: 500;
+    width: 400px;
+  }
+
+  .criteria>div>.check{
+    width: 23px;
+    height: 23px;
+  }
+
+
+  .errorpass{
+    font-size: 18px;
+    padding-left: 10px;
+    font-weight: 500;
+  }
+
+
+
+  .resetsuccesfull{
+    gap: 26px;
+    padding: 20px;
+    width: 400px;
+    height: 250px;
+  }
+
+
+  .resetsuccesfull>label{
+    font-size: 23px;
+  }
+
+
+
+  .loading>label{
+    width: 18px;
+    height: 18px;
+  }
+}
+
+
+@media (max-width:600px) {
+  .admno{
+    font-size: 18px;
+    font-weight: 500;
+  }
+
+
+  .resetform{
+    gap: 15px;
+    padding: 20px;
+  }
+
+
+  .resettitle{
+    margin-bottom: 26px;
+    font-size: 33px;
+  }
+
+
+  .resetinputs{
+    gap: 15px;
+  }
+
+
+  .resetinputs>label{
+    font-size: 20px;
+  }
+
+
+  .resetinputs>div>[type='password'],.resetinputs>div>[type='text']{
+    width: 300px;
+    height: 40px;
+    padding-right: 40px;
+    padding-left: 15px;
+    font-size: 20px;
+  }
+
+
+
+  .eye{
+    font-size: 20px;
+  }
+
+
+
+
+
+  .strike{
+    width: 33px;
+    height: 3px;
+    right: 5px;
+  }
+
+
+
+
+
+
+
+  .resetbtn{
+    width: 140px;
+    font-size: 20px;
+    height: 40px;
+  }
+
+
+
+
+
+  .criteria>div>label{
+    font-size: 16px;
+    font-weight: 500;
+    width: 300px;
+  }
+
+  .criteria>div>.check{
+    width: 20px;
+    height: 20px;
+  }
+
+
+  .errorpass{
+    font-size: 18px;
+    padding-left: 10px;
+    font-weight: 500;
+  }
+
+
+
+  .resetsuccesfull{
+    gap: 26px;
+    padding: 20px;
+    width: 400px;
+    height: 250px;
+  }
+
+
+  .resetsuccesfull>label{
+    font-size: 23px;
+  }
+
+
+  .loading>label{
+    width: 16px;
+    height: 16px;
+  }
+}
+
+
+
+
+
+
+@media (max-width:550px) {
+  .admno{
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+
+  .resetform{
+    gap: 10px;
+    padding: 15px;
+  }
+
+
+  .resettitle{
+    margin-bottom: 0px;
+    margin-top: 0px;
+    font-size: 26px;
+  }
+
+
+  .resetinputs{
+    gap: 10px;
+  }
+
+
+  .resetinputs>label{
+    font-size: 16px;
+  }
+
+
+  .resetinputs>div>[type='password'],.resetinputs>div>[type='text']{
+    width: 230px;
+    height: 30px;
+    padding-right: 40px;
+    padding-left: 10px;
+    font-size: 14px;
+  }
+
+
+
+  .eye{
+    font-size: 16px;
+  }
+
+
+  .strike{
+    width: 26px;
+    height: 3px;
+    right: 5px;
+  }
+
+
+
+
+
+
+
+  .resetbtn{
+    width: 120px;
+    font-size: 16px;
+    height: 35px;
+  }
+
+
+  .criteria{
+    gap: 5px;
+  }
+
+
+
+
+
+  .criteria>div>label{
+    font-size: 12px;
+    font-weight: 500;
+    width: 240px;
+  }
+
+
+
+  .criteria>div>.check{
+    width: 14px;
+    height: 14px;
+    border: 2px solid;
+    font-size: 11px;
+  }
+
+
+  .errorpass{
+    font-size: 12px;
+    padding-left: 0px;
+    font-weight: 700;
+  }
+
+
+
+  .resetsuccesfull{
+    gap: 20px;
+    padding: 20px;
+    width: 350px;
+    height: 250px;
+  }
+
+
+  .resetsuccesfull>label{
+    font-size: 20px;
+  }
+
+
+  .loading>label{
+    width: 13px;
+    height: 13px;
+  }
+}
+
+
+
+
+
+@media (max-width:400px) {
+  .resetsuccesfull{
+    gap: 26px;
+    padding: 20px;
+    width: 260px;
+    height: 200px;
+  }
+
+
+  .resetok{
+    width: 40px;
+    height: 40px;
+  }
+
+
+  .resetsuccesfull>label{
+    font-size: 16px;
+  }
+}
+
+
+
+
+
+@media (max-width:300px) {
+  .admno{
+    font-size: 12px;
+    font-weight: 500;
+  }
+
+
+  .resetform{
+    gap: 10px;
+    padding: 10px;
+  }
+
+
+  .resettitle{
+    margin-bottom: 0px;
+    margin-top: 0px;
+    font-size: 23px;
+  }
+
+
+  .resetinputs{
+    gap: 5px;
+  }
+
+
+  .resetinputs>label{
+    font-size: 14px;
+  }
+
+
+  .resetinputs>div>[type='password'],.resetinputs>div>[type='text']{
+    width: 180px;
+    height: 30px;
+    padding-right: 30px;
+    padding-left: 10px;
+    font-size: 12px;
+  }
+
+  .eye{
+    font-size: 14px;
+  }
+
+  .strike{
+    width: 23px;
+    height: 2px;
+    right: 6px;
+  }
+
+  .resetbtn{
+    width: 120px;
+    font-size: 16px;
+    height: 35px;
+  }
+
+
+  .criteria{
+    gap: 5px;
+  }
+
+  .criteria>div{
+    gap: 5px;
+  }
+
+  .criteria>div>label{
+    font-size: 10px;
+    font-weight: 500;
+    width: 200px;
+  }
+
+
+
+  .criteria>div>.check{
+    width: 12px;
+    height: 12px;
+    border: 2px solid;
+    font-size: 11px;
+  }
+
+
+  .errorpass{
+    font-size: 10px;
+
+  }
+
+
+  .resetsuccesfull{
+    gap: 10px;
+    padding: 20px;
+    width: 200px;
+    height: 170px;
+  }
+
+  .resetok{
+    width: 40px;
+    height: 40px;
+  }
+
+
+  .resetsuccesfull>label{
+    font-size: 14px;
+  }
+
+
+
+  .loading>label{
+    width: 13px;
+    height: 13px;
   }
 }
