--- a/src/Pages/Result/Result.css
+++ b/src/Pages/Result/Result.css
@@ -1,6 +1,8 @@
 .resultcontainer{
     height: 100%;
     display: flex;
+    min-width: 100%;
+    max-width: max-content;
     flex-direction: column;
     align-items: center;
     background-image: url(./Resultbg.jpg);
@@ -16,7 +18,7 @@
 
 .studentdetails{
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto auto auto;
     gap: 40px;
 }
 
@@ -49,7 +51,7 @@
 
 .result{
     border: 1px solid;
-    font-size: 20px;
+    font-size: 23px;
 }
 
 
@@ -102,4 +104,202 @@
 
 .buttons>button:hover{
     background-color: blue;
+}
+
+
+
+
+@media (max-width:1200px) {
+
+    
+    .banner{
+        width: 100%;
+        height: 20%;
+    }
+    
+    .studentdetails{
+        display: grid;
+        grid-template-columns: auto;
+        gap: 30px;
+    }
+    
+    
+    .studentdetails>h1{
+        font-size: 23px;
+    }
+    
+    
+    .resultdiv{
+        gap: 50px;
+    }
+    
+    
+    .resultcaption{
+        font-size: 30px;
+        font-weight:500;
+    }
+    
+    .result{
+        border: 1px solid;
+        font-size: 20px;
+    }
+
+
+    
+    
+    .buttons{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+    }
+    
+    
+    .buttons>a{
+        font-size: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+        border-radius: 10px;
+        background-color: rgb(82, 82, 219);
+        border: none;
+        text-decoration: none;
+        color: aliceblue;
+        font-weight: 500;
+        height: 60px;
+        cursor: pointer;
+        transition: .4s;
+        display: flex;
+        align-items: center;
+    }
+    
+    
+    .buttons>button:hover{
+        background-color: blue;
+    }
+}
+
+
+
+
+@media (max-width:1000px) {
+    .banner{
+        width: 80%;
+        height: 10%;
+    }
+    
+    .studentdetails{
+        display: grid;
+        grid-template-columns: auto;
+        gap: 30px;
+    }
+    
+    
+    .studentdetails>h1{
+        font-size: 23px;
+    }
+    
+    
+    .resultdiv{
+        gap: 50px;
+    }
+    
+    
+    .resultcaption{
+        font-size: 30px;
+        font-weight:500;
+    }
+    
+    .result{
+        border: 1px solid;
+        font-size: 16px;
+    }
+
+
+    
+    
+    .buttons{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+    }
+    
+    
+    .buttons>a{
+        font-size: 16px;
+        padding-left: 20px;
+        padding-right: 20px;
+        border-radius: 10px;
+        height: 50px;
+    }
+    
+    
+    .buttons>button:hover{
+        background-color: blue;
+    }
+}
+
+
+
+
+
+@media (max-width:900px) {
+    .banner{
+        width: 80%;
+        height: 10%;
+    }
+    
+    .studentdetails{
+        display: grid;
+        grid-template-columns: auto;
+        gap: 30px;
+    }
+    
+    
+    .studentdetails>h1{
+        font-size: 23px;
+    }
+    
+    
+    .resultdiv{
+        gap: 50px;
+    }
+    
+    
+    .resultcaption{
+        font-size: 30px;
+        font-weight:500;
+    }
+    
+    .result{
+        border: 1px solid;
+        font-size: 14px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    
+    .buttons{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+    }
+    
+    
+    .buttons>a{
+        font-size: 16px;
+        padding-left: 20px;
+        padding-right: 20px;
+        border-radius: 10px;
+        height: 50px;
+    }
+    
+    
+    .buttons>button:hover{
+        background-color: blue;
+    }
 }
